fixed mobile spacing issue

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,11 +1,10 @@
 .header {
- position: fixed;
- top:0;
- z-index: 100;
- width: 100%;
- height: 75px;
- box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
-
+  position: fixed;
+  top:0;
+  z-index: 100;
+  width: 100%;
+  height: 75px;
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
   background-color: var(--mantine-color-body);
   border-bottom: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
 
@@ -38,19 +37,34 @@
 
 
 .imageWrapper {
-  display: flex;             /* ensures image can be centered if needed */
-  align-items: center;
-  height: 100%;
-
-    /* @media (max-width: $mantine-breakpoint-sm) {
-    height: 80px;   
-    }           */
+  max-height: 100%;
+  padding: 0px;
+  margin: 0px;
 }
 
 .imageWrapper img {
    max-height: 100%;      /* respect parent, but don’t crop */
   object-fit: contain;
 
+}
+
+.headerIcon{
+  max-width: 100px;
+  margin-left: 0;
+
+  @media ((max-width: $mantine-breakpoint-sm)) {
+    margin-left: 15px;
+    max-width: 60px;
+  }
+}
+
+.headerName{
+    max-width: 358px;
+
+  @media ((max-width: $mantine-breakpoint-sm)) {
+    margin-left: 15px;
+    max-width: 250px;
+ }
 }
 
 
